Minor code changes, added swagger yaml
